--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "codemirror": "^5.57.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "craco-less": "^1.17.0",
@@ -56,8 +57,8 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
-    "react-ace": "^9.1.3",
     "react-app-polyfill": "^1.0.6",
+    "react-codemirror2": "^7.2.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
