--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "codemirror": "^5.57.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "craco-less": "^1.17.0",
